post template updated

--- a/.env
+++ b/.env
@@ -18,3 +18,7 @@ GOOGLE_CLIENT_SECRET_Hotel = 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
 kuePort = 3000
 
 cookieSecretKey = hemanth&VenomCodes
+
+#for admin data
+adminUserHemanth = m.saihemanth1@gmail.com
+adminUserVenom = laxminarayanakoyyana1@gmail.com
