--- a/.env
+++ b/.env
@@ -6,7 +6,8 @@ email_mailer = restaurantreviewsratings@gmail.com
 pass_mailer = opotxjksrewrgtzw
 
 # mongoose connect url
-mongo_url = mongodb+srv://venom:venom1234@backendlearn.adxcioh.mongodb.net/RRR29?retryWrites=true&w=majority
+mongo_url = mongodb://localhost:27017/RRR
+
 
 # for google oauth passport
 GOOGLE_CLIENT_ID = 679401964788-qkllghi7s889fqpn4988r7gg9gbhqf9s.apps.googleusercontent.com
