developer page update

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ email_mailer = restaurantreviewsratings@gmail.com
 pass_mailer = opotxjksrewrgtzw
 
 # mongoose connect url
-mongo_url = mongodb://localhost:27017/RRR
+mongo_url = mongodb://localhost:27017/RRR1
 
 
 # for google oauth passport
